<resources>
    <string name="app_name">UnCage</string>
    <string name="code">Enter Verification Code</string>
    <string name="phoneNumber">Enter Phone Number</string>
    <string name="send">Send Code</string>
    <string name="health">Health Support</string>
    <string name="create">Create Account</string>
    <string name="login">Log In</string>
    <string name="welcome">Uncage Yourself!</string>
    <string name="name1">Counselling</string>
    <string name="name2">Suggestions</string>
    <string name="name3">Chat Box</string>
    <string name="name4">Sessions</string>
    <string name="full_name">Full name</string>
<string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sometimes">Sometimes</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="already_have_account_login_here">Already have Account? LogIn Here</string>
    <string name="create_new_account">Create New Account</string>
    <string name="s1">Q. Are you feeling sad or down?</string>
    <string name="s2">Q. Do you able to concentrate?</string>
    <string name="s3">Q. Are you always confused?</string>
    <string name="s4">Q. Do you get angry and aggressive very often?</string>
    <string name="s5">Q. Do you have delusions(detachment from reality)or paranoia or hallucinations?</string>
    <string name="s6">Q. Do you feel tired or low in energy?</string>
    <string name="s7">Q. Do you have problems in sleeping?</string>
    <string name="s8">Q. Do your mood changes very frequently from high to low?</string>
    <string name="s9">Q. Do you withdrawal from friends and activities?</string>
    <string name="s10">Q. Do you consume drugs or alcohol?</string>
    <string name="submit">Submit</string>
</resources>