<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile_Activity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/welcome"
        android:textColor="@color/purple_200"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <Button
                android:id="@+id/name1"
                android:background="@layout/button_shape"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/name1"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="15dp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />

            <Button
                android:id="@+id/name2"
                android:background="@layout/button_shape"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/name2"
                android:padding="15dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />



        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <Button
                android:id="@+id/name3"
                android:background="@layout/button_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name3"
                android:gravity="center"
                android:padding="15dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />

            <Button
                android:id="@+id/name4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name4"
                android:background="@layout/button_shape"
                android:padding="15dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="150dp" />



        </TableRow>



    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>