<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="Welcome to Quiz"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/bg"
          app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/s1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/textView2">

                <RadioButton
                    android:id="@+id/rd11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sometimes"
                    android:textColor="@color/black" />


            </RadioGroup>
            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/s2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/textView2">

                <RadioButton
                    android:id="@+id/rd21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sometimes"
                    android:textColor="@color/black" />


            </RadioGroup>
            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/s3"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/textView2">

                <RadioButton
                    android:id="@+id/rd31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sometimes"
                    android:textColor="@color/black" />


            </RadioGroup>
            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/s4"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/textView2">

                <RadioButton
                    android:id="@+id/rd41"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd43"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sometimes"
                    android:textColor="@color/black" />


            </RadioGroup>
            <TextView
                android:id="@+id/tv5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/s5"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/textView2">

                <RadioButton
                    android:id="@+id/rd51"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd52"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd53"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sometimes"
                    android:textColor="@color/black" />


            </RadioGroup>
            <TextView
                android:id="@+id/tv6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/s6"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/textView2">

                <RadioButton
                    android:id="@+id/rd61"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd62"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd63"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sometimes"
                    android:textColor="@color/black" />


            </RadioGroup>
            <TextView
                android:id="@+id/tv7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/s7"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/textView2">

                <RadioButton
                    android:id="@+id/rd71"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd72"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd73"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sometimes"
                    android:textColor="@color/black" />


            </RadioGroup>
            <TextView
                android:id="@+id/tv8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/s8"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/textView2">

                <RadioButton
                    android:id="@+id/rd81"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd82"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd83"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sometimes"
                    android:textColor="@color/black" />


            </RadioGroup>
            <TextView

                android:id="@+id/tv9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/s9"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/textView2">

                <RadioButton
                    android:id="@+id/rd91"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd92"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd93"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sometimes"
                    android:textColor="@color/black" />


            </RadioGroup>
            <TextView
                android:id="@+id/tv10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/s10"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/textView2">

                <RadioButton
                    android:id="@+id/rd101"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd102"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rd103"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sometimes"
                    android:textColor="@color/black" />


            </RadioGroup>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="20sp" />

            <Button
                android:id="@+id/submit_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:textSize="20sp" />

        </LinearLayout>


    </ScrollView>









</androidx.constraintlayout.widget.ConstraintLayout>